--- a/research report.tex
+++ b/research report.tex
@@ -2,6 +2,7 @@
 \usepackage[english]{babel}
 \usepackage{mathtools}
 \usepackage{graphicx}
+\usepackage[utf8]{inputenc}
 \graphicspath{ {graphs/} }
 
 \begin{document}
