--- a/research report.tex
+++ b/research report.tex
@@ -95,6 +95,34 @@ The resulting graphs became smaller and smaller and as such, became increasingly
 	\label{fig:graphc3}
 \end{figure}
 The resulting graphs became bigger and bigger and as such they became hard to read and put into one image. The standard deviation increased as well.
+
+\item We hypothesised that the run time of the algorithm increases linearly as the amount of simulation iterations increases. This has been proven correct for both the algorithm by Eades and the algorithm by F\&R. We have taken our input values and calculated the correlation between the amount of iterations the simulation has run and the amount of time it took to complete the simulation. The coefficients were as follows:\\
+\begin{tabular}{|c|c|}
+\hline 
+Eades & Fruchtman \& Reingold \\ 
+\hline 
+0.997829143& 0.998978831 \\ \hline 
+0.996927906& 0.995757504 \\ \hline 
+0.997490337& 0.997700843 \\ \hline 
+0.991544087& 0.9902479 \\ \hline 
+0.997503528& 0.996363056 \\ \hline 
+0.996257363& 0.994829416 \\ \hline 
+0.999352504& 0.999482967 \\ \hline 
+0.997158802& 0.994987758 \\ \hline 
+0.993337222& 0.988891881 \\ \hline 
+0.998740259& 0.999288263 \\ \hline 
+0.997058942& 0.995596278 \\ \hline 
+0.998111649& 0.996363793 \\ \hline 
+0.998624186& 0.996538702 \\ \hline 
+0.996166923& 0.998535299 \\ \hline 
+0.999083811& 0.998397619 \\ \hline 
+0.997805027& 0.996253847 \\ \hline 
+0.99772634& 0.990304551 \\ \hline 
+0.998800511& 0.997882872 \\ \hline 
+0.999360905& 0.998293157 \\ \hline 
+0.9986418& 0.998688101 \\ \hline 
+\end{tabular} 
+The average correlation coefficient for the Eades algorithm was $0.997376062$. For F\&R, this value was $0.996169132$.
 \end{itemize}
 
 \section{Discussion and conclusion}
