--- a/research report.tex
+++ b/research report.tex
@@ -2,7 +2,6 @@
 \usepackage[english]{babel}
 \usepackage{mathtools}
 \usepackage{graphicx}
-\usepackage[utf8]{inputenc}
 \graphicspath{ {graphs/} }
 
 \begin{document}
@@ -76,7 +75,7 @@ As output data, we get optimised graphs of course, but in order to answer our su
 Our results were interesting and proved some of our hypotheses right while proving others wrong. We continuously used 5 tests per different variable setting.
 \begin{itemize}
 \item We hypothesised that the runtime of the algorithm increases linearly as the number of iterations increases. This implies that each iteration computes in roughly the same amount of time.
-\item We hypothesised that the runtime of the algorithm increases quadratically as the number of input vertices increases. This has been proven mostly true. As shown in the figure below, both F\&R and Eades are a good fit, with Coefficients of Determination above 0.95. Furthermore, a two-tailed, paired-samples t-test shows that the runtime values are clearly unrelated with $p = 3.8 * 10^{-17}$ with $n = 570$. Interestingly, Eades shows $\mathcal{O}(n^3)$-like behaviour, whereas $\mathcal{O}(n^2)$ is expected. F\&R does behave as expected.
+\item We hypothesised that the runtime of the algorithm increases quadratically as the number of input vertices increases. This has been proven mostly true. As shown in the figure below, both F\&R and Eades are a good fit, with Coëfficients of Determination above 0.95. Furthermore, a two-tailed, paired-samples t-test shows that the runtime values are clearly unrelated with $p = 3.8 * 10^{-17}$ with $n = 570$. Interestingly, Eades shows $\mathcal{O}(n^3)$-like behaviour, whereas $\mathcal{O}(n^2)$ is expected. F\&R does behave as expected.
 \begin{figure}[h]
   \centering
   \includegraphics[height=7cm]{timecomplexity}
@@ -128,6 +127,8 @@ The average correlation coefficient for the Eades algorithm was $0.997376062$. F
 
 \section{Discussion and conclusion}
 In the previous section, we mention that the measured time complexity of Eades shows $\mathcal{O}(n^3)$-like behaviour. This is quite interesting, as the literature shows that $\mathcal{O}(n^2)$ is to be expected. Although our implementation closely matches the pseudocode given, small variations may nonetheless have occurred. We have been unable to pinpoint a cause, but algorithmic errors in the less well-specified parts of the algorithm are our main suspect.
+
+We were right in assuming the maximum amount of iterations is has a direct linear correlation to the runtime, as the correlation coefficient is extremely close to 1. This came as no surprise to use.
 
 Our conclusion is that even though the technology has vastly improved over the years since 1984, the algorithm of Eades is still fairly accurate as we saw that it sometimes took several minutes in order to come up with output data. We also saw that the constants in Eades' algorithm are accurate. Finally we were able to see that Fruchterman and Reingold's extension had a much shorter runtime, but it still increased greatly as the graphs grew. As such, the limit of 30 vertices on Eades and the limit of 40 vertices on Fruchterman and Reingold are still fairly accurate. We may be able to increase these limits slightly, but not by a whole lot as this still takes a lot of time.
 
